# llm-system

./: .gitignore  FINDINGS.md  README.md  package.json  pnpm-lock.yaml
.moon/: toolchain.yml  workspace.yml
apps/api/: .env.example  moon.yml  pyproject.toml
apps/api/src/speechify_api/: auth.py  config.py  db.py  grpc_server.py  http_app.py  models.py  schemas.py  seed.py
apps/api/src/speechify_api/proto/: speechify.proto  speechify_pb2.py  speechify_pb2_grpc.py
apps/api/src/speechify_api/services/: conversion_service.py  document_service.py
apps/api/tests/: conftest.py  test_auth.py  test_conversion_service.py  test_document_service.py
apps/web/: index.html  moon.yml  package.json
apps/web/src/: App.tsx  types.ts
apps/web/src/api/: client.ts
apps/web/src/components/: DocumentList.tsx  UploadForm.tsx
